<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lazy_agent_sim</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="jordan.esh@monashmotorsport.com">jordan</maintainer>
    <license>GPL-3.0-only</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>pluginlib</depend>
    <depend version_gte="2023.1.2">webots_ros2</depend>
    <depend version_gte="2023.1.2">webots_ros2_driver</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_cmake_copyright</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>
    <test_depend>ament_cmake_clang_tidy</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
